# PH-DEP

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
PH-Food-Price-Decomposition/: .env.example  .gitignore  README.md  requirements.txt
PH-Food-Price-Decomposition/dashboard/: app.py
PH-Food-Price-Decomposition/notebooks/: 01_data_loading_audit.ipynb  02_rice_price_analysis.ipynb  03_vegetable_volatility.ipynb  04_fuel_food_correlation.ipynb  05_stl_decomposition.ipynb  06_shock_identification.ipynb  07_key_findings.ipynb
PH-Food-Price-Decomposition/scripts/: export_excel.py  scrape_doe_fuel.py  scrape_psa_prices.py
PH-Food-Price-Decomposition/sql/: price_trend_by_commodity.sql  schema.sql  seasonal_index.sql  shock_events.sql
PH-Food-Price-Decomposition/tests/: conftest.py  test_scraper.py
PH-Price-Tracker/: docker-compose.yml
PH-Price-Tracker/prompts/: 001-prompt-data-engineer-pipeline.md
PH-Price-Tracker/tasks/: lessons.md  todo.md
PH-Price-Tracker/tests/: conftest.py  test_loader.py  test_models.py
PH-Price-Tracker/transforms/: dbt_project.yml  profiles.yml
PH-Regional-Inequality/: requirements.txt
PH-Regional-Inequality/dashboard/: app.py
PH-Regional-Inequality/notebooks/: 02_income_distribution_eda.ipynb  04_gini_trend_analysis.ipynb  05_choropleth_maps.ipynb
PH-Regional-Inequality/sql/: gini_trend.sql  (+1 more)
PH-Social-Sentiment-Pipeline/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PH-Social-Sentiment-Pipeline/.github/workflows/: pipeline.yml
PH-Social-Sentiment-Pipeline/dashboard/: app.py
PH-Social-Sentiment-Pipeline/fixtures/: USTrends.json  WWTrends.json  WeLoveTheEarth.json
PH-Social-Sentiment-Pipeline/notebooks/: 01_fixture_eda.ipynb  02_sentiment_analysis.ipynb
PH-Social-Sentiment-Pipeline/scripts/: export_excel.py  run_simulation.py
PH-Social-Sentiment-Pipeline/src/ph_sentiment/: __init__.py  config.py  loader.py  models.py  pipeline.py
PH-Social-Sentiment-Pipeline/src/ph_sentiment/processor/: aggregator.py  enrichment.py  sentiment.py
PH-Social-Sentiment-Pipeline/src/ph_sentiment/producer/: simulator.py  tweet_sampler.py  twitter_trends.py
PH-Social-Sentiment-Pipeline/tests/: conftest.py  test_loader.py  test_models.py  test_processor.py  test_producer.py
PH-Social-Sentiment-Pipeline/transforms/: dbt_project.yml  profiles.yml
PH-Social-Sentiment-Pipeline/transforms/models/marts/: _marts.yml  keyword_volume.sql  sentiment_hourly.sql  trending_topics.sql
PH-Social-Sentiment-Pipeline/transforms/models/staging/: _staging.yml  stg_tweet_events.sql
notebooks/: 01_data_loading_audit.ipynb  03_poverty_regional_analysis.ipynb  06_key_findings.ipynb
scripts/: download_data.py  export_excel.py
sql/: poverty_by_region.sql  schema.sql
tests/: test_download_data.py
(+18 files in other folders)
